[workspace]
resolver = "2"
members = ["days/*"]

[workspace.dependencies]
adventurous = "0.3.0"
anyhow = "1.0"
dhat = "0.3.2"
divan = "0.1.4"
enum-map = "2.7.3"
indexmap = "2.1.0"
indoc = "2.0.4"
nom = "7.1.3"
pretty_assertions = "1.4.0"

[profile.instruments]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

[profile.flamegraph]
inherits = "release"
debug = true
