cabal-version:      2.4
name:               day01
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marshall Bowers
maintainer:         elliott.codes@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

library
    exposed-modules:  Day1

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: test/Spec.hs

    build-depends:
          base
        , day01
        , hspec

    default-language: Haskell2010

executable day01
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        day01

    hs-source-dirs:   app
    default-language: Haskell2010
