cabal-version:      2.4
name:               day02
version:            0.1.0.0
author:             Marshall Bowers
maintainer:         elliott.codes@gmail.com

common shared-properties
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wno-name-shadowing

library
    import: shared-properties
    exposed-modules:  Day2
    build-depends:
        base ^>=4.14.1.0,
        split
    hs-source-dirs:   src

executable day02
    import: shared-properties
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.1.0,
        day02

    hs-source-dirs:   app

test-suite day02-tests
    import: shared-properties
    type: exitcode-stdio-1.0
    main-is: test/Spec.hs

    build-depends:
          base
        , day02
        , hspec
