[package]
name = "day_01"
version = "0.1.0"
edition = "2021"

[dependencies]
adventurous.workspace = true
anyhow.workspace = true

[dev-dependencies]
divan.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "day_01"
path = "benches/day_01_bench.rs"
harness = false
