[package]
name = "day_03"
version = "0.1.0"
edition = "2021"

[dependencies]
adventurous.workspace = true
anyhow.workspace = true
indexmap.workspace = true

[dev-dependencies]
criterion.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "day_03_bench"
harness = false
